<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="connect"
        android:text="@string/buttonConnect" />

    <TextView
        android:id="@+id/portText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/connectButton"
        android:layout_alignBottom="@+id/connectButton"
        android:layout_centerHorizontal="true"
        android:hint="@string/portNumber" />

    <TextView
        android:id="@+id/ipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/portText"
        android:layout_alignBottom="@+id/portText"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="22dp"
        android:hint="@string/ipAddress" />

    <Button
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/connectButton"
        android:layout_centerVertical="true"
        android:text="@string/rightButton"
        android:onClick="buttonAction" />

    <Button
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignRight="@+id/ipText"
        android:text="@string/leftButton"
        android:onClick="buttonAction" />

    <Button
        android:id="@+id/forwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignRight="@+id/portText"
        android:layout_marginBottom="25dp"
        android:text="@string/forwardButton"
        android:onClick="buttonAction" />

    <Button
        android:id="@+id/reverseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button3"
        android:layout_marginTop="17dp"
        android:text="@string/reverseButton"
        android:onClick="buttonAction" />

</RelativeLayout>
