<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ButtonActivity" >

    <Button
        android:id="@+id/forwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:text="@string/forwardButton"
        android:onClick="buttonAction" />

    <Button
        android:id="@+id/reverseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/forwardButton"
        android:layout_below="@+id/forwardButton"
        android:layout_marginTop="100dp"
        android:text="@string/reverseButton"
        android:onClick="buttonAction" />

    <Button
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/reverseButton"
        android:text="@string/rightButton"
        android:onClick="buttonAction" />

    <Button
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rightButton"
        android:layout_alignBottom="@+id/rightButton"
        android:layout_toLeftOf="@+id/reverseButton"
        android:text="@string/leftButton"
        android:onClick="buttonAction" />

</RelativeLayout>
